183: Hotel checkout login screen changes
Summary: Changed the text of hotel login button. Also changed the text which
appears after successful login. Changed the login screen heading from
'Expedia account' to 'Travelocity account' and also changed the login
button text.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D84

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -223,6 +223,7 @@
     <attr name="loginWithExpediaButtonText" format="reference|string" />
     <attr name="loginWithExpediaTitleText" format="reference|string" />
     <attr name="hotelDetailPlaceHolderDrawable" format="reference" />
+    <attr name="loginWithExpediaContentDescription" format="reference|string" />
 
     <!-- Hotel Confirmation, Customer support option drawable -->
     <attr name="hotelConfirmationCallActionDrawable" format="reference" />
