--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -195,6 +195,7 @@
         <item name="hotelCheckoutLogoutLogoDrawable">@drawable/ic_expedia_logo</item>
         <item name="hotelCheckoutLoginLogoDrawable">@drawable/ic_log_in</item>
         <item name="hotelCheckoutLoginButtonText">@string/Log_in_with_Expedia</item>
+        <item name="loginWithExpediaContentDescription">@string/cd_checkout_log_in_with_expedia</item>
         <item name="cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book</item>
         <item name="hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_expedia_white_logo_small</item>
         <item name="hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale</item>
