--- a/project/res/layout/fragment_log_in.xml
+++ b/project/res/layout/fragment_log_in.xml
@@ -127,7 +127,7 @@
                     android:id="@+id/log_in_with_expedia_btn"
                     style="@style/LoginFormButton"
                     android:background="?attr/loginBookNowButtonDrawable"
-                    android:contentDescription="@string/cd_checkout_log_in_with_expedia"
+                    android:contentDescription="?attr/loginWithExpediaContentDescription"
                     android:gravity="center"
                     android:text="?attr/loginWithExpediaButtonText"
                     android:textColor="@android:color/black" />
