--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#454235" >
+             android:id="@+id/root_layout"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#454235">
 
     <FrameLayout
         android:id="@+id/cvv_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <LinearLayout
-        android:id="@+id/checkout_mode_root"
+        android:id="@+id/bucket_showing_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:baselineAligned="false"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <ScrollView
             android:id="@+id/trip_bucket_scroll"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:fillViewport="true" >
+            android:fillViewport="true">
 
             <LinearLayout
                 android:id="@+id/trip_bucket_container"
@@ -33,7 +33,7 @@
                 android:paddingBottom="8dp"
                 android:paddingLeft="24dp"
                 android:paddingRight="24dp"
-                android:paddingTop="8dp" >
+                android:paddingTop="8dp">
 
                 <LinearLayout
                     android:id="@+id/trip_bucket_header_container"
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="16dp"
-                    android:paddingTop="16dp" >
+                    android:paddingTop="16dp">
 
                     <TextView
                         android:id="@+id/your_trip_tv"
@@ -51,7 +51,7 @@
                         android:gravity="center_vertical"
                         android:text="@string/your_trip"
                         android:textColor="#FFFFFF"
-                        android:textSize="18dp" />
+                        android:textSize="18dp"/>
 
                     <TextView
                         android:id="@+id/trip_date_range"
@@ -61,56 +61,90 @@
                         android:gravity="center_vertical"
                         android:text=""
                         android:textColor="#FFFFFF"
-                        android:textSize="18dp" />
+                        android:textSize="18dp"/>
                 </LinearLayout>
 
                 <FrameLayout
                     android:id="@+id/bucket_hotel_frag_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp" />
+                    android:layout_marginTop="16dp"/>
 
                 <FrameLayout
                     android:id="@+id/bucket_flight_frag_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp" />
+                    android:layout_marginTop="16dp"/>
             </LinearLayout>
         </ScrollView>
 
-        <LinearLayout
-            android:id="@+id/checkout_form_and_slide_container"
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="vertical" >
+            android:layout_weight="2">
 
-            <FrameLayout
-                android:id="@+id/checkout_forms_container"
+            <LinearLayout
+                android:id="@+id/checkout_forms_and_slide_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <FrameLayout
-                android:id="@+id/finish_checkout_container"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_weight="0"
-                android:background="#FF0000"
-                android:visibility="gone" >
-
-                <!-- TODO: We will probably end up with a fragment here, or a much more complicated view based on the mocks -->
-
-                <TextView
-                    android:id="@+id/goto_cvv_btn"
+                <FrameLayout
+                    android:id="@+id/checkout_forms_container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="GOTO CVV SCREEN"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <FrameLayout
+                    android:id="@+id/finish_checkout_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_weight="0"
+                    android:background="#FF0000"
+                    android:visibility="gone">
+
+                    <!-- TODO: We will probably end up with a fragment here, or a much more complicated view based on the mocks -->
+
+                    <TextView
+                        android:id="@+id/goto_cvv_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="GOTO CVV SCREEN"
+                        android:textColor="#FFFFFF"
+                        android:textSize="32dp"/>
+                </FrameLayout>
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/confirmation_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!-- TODO: Remove dummy TextView -->
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textColor="#FFFFFF"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"
+                    android:text="I like the way you booked it."/>
             </FrameLayout>
-        </LinearLayout>
+        </FrameLayout>
     </LinearLayout>
+
+
+    <FrameLayout
+        android:id="@+id/booking_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <!-- TODO: Remove dummy TextView -->
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:textSize="32dp"
+            android:text="Booking it..."/>
+    </FrameLayout>
 
 </FrameLayout>
