--- a/project/res/layout/fragment_tablet_flight_details.xml
+++ b/project/res/layout/fragment_tablet_flight_details.xml
@@ -47,7 +47,10 @@
                 android:layout_marginRight="4dp"
                 android:background="#3987bf"
                 android:gravity="center"
-                android:padding="4dp"
+                android:paddingBottom="4dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="4dp"
                 android:textAllCaps="true"
                 android:textColor="#fff"
                 android:textSize="14sp"
