185: Rebrand best price guarantee text
Summary:
https://expedia.mingle.thoughtworks.com/projects/travelocity_eb_apps/cards/185

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D73

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -252,6 +252,8 @@
     <!-- for hotels and flights travel type -->
     <attr name="travelerLabelOnCheckout" format="reference|string" />
 
+    <!-- for hotels best price guarantee type -->
+    <attr name="bestPriceGuaranteeString" format="reference|string" />
     <!-- for hotels details book button -->
     <attr name="hotelBookButtonString" format="reference|string" />
 </resources>
