--- a/project/res/layout/fragment_hotel_rules.xml
+++ b/project/res/layout/fragment_hotel_rules.xml
@@ -37,7 +37,7 @@
         <TextView
             android:id="@+id/best_price_guarantee"
             style="@style/LegalInformationHeader"
-            android:text="@string/best_price_guarantee" />
+            android:text="?attr/bestPriceGuaranteeString" />
 
         <View
             android:id="@+id/atol_information_divider"
