--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -204,6 +204,7 @@
         <item name="hotelImagePlaceHolderDrawable">@drawable/ic_image_placeholder</item>
         <item name="hotelwebViewActionBarLogo">@drawable/ic_logo_hotels</item>
         <item name="travelerLabelOnCheckout">@string/guest_details</item>
+        <item name="bestPriceGuaranteeString">@string/best_price_guarantee</item>
         <item name="hotelBookButtonString">@string/book_now</item>
     </style>
 
