2483 actually check out flight on tablet pt 2
I've added some ghetto booking support for flights on tablet. The booking
doesn't actually go through quite yet because we need to fix one small thing
on the forms. We still need to properly handle errors and gwallet, as well.
Oh man, if Dan Lew only knew how we were operating these days...

--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -133,10 +133,11 @@
     </LinearLayout>
 
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/booking_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center">
         <!-- TODO: Remove dummy TextView -->
         <TextView
             android:layout_gravity="center"
@@ -145,6 +146,10 @@
             android:textColor="#FFFFFF"
             android:textSize="32dp"
             android:text="Booking it..."/>
-    </FrameLayout>
+        <ProgressBar
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:indeterminate="true"/>
+    </LinearLayout>
 
 </FrameLayout>
