Add proper dev setting support for Hotels suppress final booking
Hotels checkout domain v2 supports the same suppressFinalBooking flag
that flights has had on the final check out call. I've switched the dev
setting to reflect this such that you can suppress a flight and or suppress
a hotel, separately. This gets rid of the "spoof" hotel bookings option
which would not actually make the check out call and just simulate a
successful response.

Also, I've updated the automation code to reflect the changes.

--- a/project/res/xml/preferences_dev.xml
+++ b/project/res/xml/preferences_dev.xml
@@ -50,10 +50,11 @@
             android:title="Disable Domain V2 Hotel Search" />
 
         <com.expedia.bookings.widget.CheckBoxPreference
-            app:id="@id/preference_spoof_booking_checkbox"
-            android:key="@string/preference_spoof_bookings"
-            android:summary="Do not actually perform hotel bookings. Instead, simulate a successful booking response."
-            android:title="Spoof hotel bookings" />
+            app:id="@id/preference_suppress_hotel_booking_checkbox"
+            android:defaultValue="true"
+            android:key="@string/preference_suppress_hotel_bookings"
+            android:summary="Do hotel bookings, but suppress any actual booking from going through"
+            android:title="Suppress Hotel Bookings" />
 
         <CheckBoxPreference
             android:key="@string/preference_filter_merchant_properties"
@@ -79,7 +80,7 @@
         <com.expedia.bookings.widget.CheckBoxPreference
             app:id="@id/preference_suppress_flight_booking_checkbox"
             android:defaultValue="true"
-            android:key="@string/preference_suppress_bookings"
+            android:key="@string/preference_suppress_flight_bookings"
             android:summary="Do flight bookings, but suppress any actual booking from going through"
             android:title="Suppress Flight Bookings" />
 
