--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -76,10 +76,10 @@
     <string name="preference_fake_hotel_price_change">fake_hotel_price_change</string>
     <string name="preference_fake_flight_price_change">fake_flight_price_change</string>
     <string name="preference_flight_fake_obfees">flight_fake_obfees</string>
-    <string name="preference_spoof_bookings">spoof_bookings</string>
     <string name="preference_filter_merchant_properties">filter_merchant_properties</string>
     <string name="preference_marketing_date">preference_amobee_marketing_date</string> <!-- Originally for amobee, cannot be renamed now -->
-    <string name="preference_suppress_bookings">suppress_bookings</string>
+    <string name="preference_suppress_flight_bookings">suppress_flight_bookings</string>
+    <string name="preference_suppress_hotel_bookings">suppress_hotel_bookings</string>
     <string name="preference_fake_current_location">preference_fake_current_location</string>
     <string name="preference_force_new_location">preference_force_new_location</string>
     <string name="preference_cookie_logging">preference_cookie_logging</string>
