176: Sharing and Phone strings now refer to Travelocity
Summary:

- Changing text for Calendar event share & share via email.
- Adding app_info_url for Travelocity POS
- Configuring string to be shown for 'Call Customer support'

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D92

--- a/project/res/layout/include_confirmation_actions.xml
+++ b/project/res/layout/include_confirmation_actions.xml
@@ -47,7 +47,7 @@
         android:layout_marginTop="4dp"
         android:drawableLeft="?attr/hotelConfirmationCallActionDrawable"
         android:drawablePadding="5dp"
-        android:text="@string/call_expedia_customer_support"
+        android:text="?attr/hotelConfirmationCallActionText"
         android:textSize="14dp"
         android:textStyle="bold" />
 
