--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -192,6 +192,7 @@
         <item name="loginWithExpediaTitleText">@string/expedia_account</item>
         <item name="hotelDetailPlaceHolderDrawable">@drawable/placeholder_lg</item>
         <item name="hotelConfirmationCallActionDrawable">@drawable/ic_phone</item>
+        <item name="hotelConfirmationCallActionText">@string/call_expedia_customer_support</item>
         <item name="hotelCheckoutLogoutLogoDrawable">@drawable/ic_expedia_logo</item>
         <item name="hotelCheckoutLoginLogoDrawable">@drawable/ic_log_in</item>
         <item name="hotelCheckoutLoginButtonText">@string/Log_in_with_Expedia</item>
