128 Travelocity related changes for info screen
Summary:
Changes for info screen including contact, website and app support links.
Legal information would be taken care off from hotel checkout screen changes.
Changed copyright section and logo to be travelocity specific.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D94

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -259,4 +259,12 @@
     <attr name="bestPriceGuaranteeString" format="reference|string" />
     <!-- for hotels details book button -->
     <attr name="hotelBookButtonString" format="reference|string" />
+
+    <attr name="aboutContactUsString" format="reference|string" />
+    <attr name="aboutWebsiteString" format="reference|string" />
+    <attr name="aboutAppSupportString" format="reference|string" />
+    <attr name="aboutCopyrightString" format="reference|string" />
+    <attr name="aboutInfoUrlString" format="reference|string" />
+    <attr name="aboutAppNameString" format="reference|string" />
+    <attr name="aboutAppLogoDrawable" format="reference" />
 </resources>
