--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -207,6 +207,13 @@
         <item name="travelerLabelOnCheckout">@string/guest_details</item>
         <item name="bestPriceGuaranteeString">@string/best_price_guarantee</item>
         <item name="hotelBookButtonString">@string/book_now</item>
+        <item name="aboutContactUsString">@string/contact_expedia</item>
+        <item name="aboutWebsiteString">@string/expedia_website</item>
+        <item name="aboutAppSupportString">@string/app_support</item>
+        <item name="aboutCopyrightString">@string/copyright</item>
+        <item name="aboutInfoUrlString">@string/app_mobiata_info_url</item>
+        <item name="aboutAppNameString">@string/app_name</item>
+        <item name="aboutAppLogoDrawable">@drawable/mobiata</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
