166: Changing flight checkout button
Summary: Changing flight checkout button color and text. Also changed
logout confirmation message.  Change select flight color from yellow to
green.  Flight action bar changed to Travelocity blue.

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D99

--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -214,6 +214,7 @@
         <item name="aboutInfoUrlString">@string/app_mobiata_info_url</item>
         <item name="aboutAppNameString">@string/app_name</item>
         <item name="aboutAppLogoDrawable">@drawable/mobiata</item>
+        <item name="logoutConfirmationString">@string/logout_confirmation</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
