--- a/project/res/layout/action_bar_flight_results.xml
+++ b/project/res/layout/action_bar_flight_results.xml
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="6dp"
-                android:src="@drawable/ic_action_bar_checkmark" />
+                android:src="?attr/actionBarCheckMarkDrawable" />
 
             <TextView
                 android:id="@+id/select_text_view"
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/select_flight"
                 android:textAppearance="?attr/actionMenuTextAppearance"
-                android:textColor="@color/action_bar_text_yellow" />
+                android:textColor="?attr/actionBarButtonTextColor" />
         </LinearLayout>
     </LinearLayout>
 
