--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -251,7 +251,7 @@
 
     <!-- Text defined separately for VSC, in the CVV entry screen -->
     <attr name="cvvEntryExplainationText" format="reference|string" />
-    
+
     <!-- for hotels and flights travel type -->
     <attr name="travelerLabelOnCheckout" format="reference|string" />
 
@@ -267,4 +267,8 @@
     <attr name="aboutInfoUrlString" format="reference|string" />
     <attr name="aboutAppNameString" format="reference|string" />
     <attr name="aboutAppLogoDrawable" format="reference" />
+
+    <!-- for logout confirmation -->
+    <attr name="logoutConfirmationString" format="reference|string" />
+
 </resources>
