167: Rebrand flights cost summary screen
Summary: Changing cost summary breakdown stripe. Also changed Expedia
Booking fee string to Travelocity.

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D100

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -216,6 +216,8 @@
 
     <!-- Cost Summary Breakdown Dialog Stripe -->
     <attr name="costSummaryDialogStripeDrawable" format="reference" />
+    <attr name="flightsCostSummaryDialogStripeDrawable" format="reference" />
+    <attr name="costSummaryBookingFeesString" format="reference|string" />
 
     <!-- Log in with Expedia/VSC screen -->
     <!-- This drawable is used in hotel detail for Book Now button as well -->
