--- a/project/res/layout/section_hotel_tablet_edit_traveler.xml
+++ b/project/res/layout/section_hotel_tablet_edit_traveler.xml
@@ -27,35 +27,24 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.gridlayout.GridLayout
+            <com.expedia.bookings.widget.TelephoneSpinner
+                android:id="@+id/edit_phone_number_country_code_spinner"
+                style="@style/Widget.Spinner.Phone.Dark"
+                app:text_view_layout="@layout/simple_spinner_item_18"
+                android:layout_width="96dp"
+                android:layout_weight="0"
+                android:layout_height="wrap_content"
+                />
+
+            <EditText
+                android:id="@+id/edit_phone_number"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                app:alignmentMode="alignMargins"
-                app:columnCount="3"
-                app:columnOrderPreserved="false"
-                app:useDefaultMargins="false"
-                tools:ignore="RequiredSize">
-
-                <com.expedia.bookings.widget.TelephoneSpinner
-                    android:id="@+id/edit_phone_number_country_code_spinner"
-                    style="@style/Widget.Spinner.Phone.Dark"
-                    app:text_view_layout="@layout/simple_spinner_item_18"
-                    android:layout_width="100dp"
-                    app:layout_columnSpan="1"/>
-
-                <EditText
-                    android:id="@+id/edit_phone_number"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|fill_horizontal"
-                    app:layout_columnSpan="2"
-                    android:hint="@string/phone_number_hint"
-                    android:inputType="phone"
-                    android:singleLine="true"
-                    tools:ignore="RequiredSize"/>
-
-            </com.gridlayout.GridLayout>
+                android:layout_weight="1"
+                android:hint="@string/phone_number_hint"
+                android:inputType="phone"
+                android:singleLine="true"
+                tools:ignore="RequiredSize"/>
 
             <EditText
                 android:id="@+id/edit_email_address"
@@ -75,6 +64,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/email_disclaimer"
+            android:gravity="right"
             android:textColor="@color/data_review_grey"
             android:textSize="12sp"/>
     </LinearLayout>
