Change button colors according to new mocks
Summary: Changing Book Now and Log in button color to green.  Also
button text for travelocity is changed to white.

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D101

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -226,6 +226,8 @@
     <attr name="loginWithExpediaTitleText" format="reference|string" />
     <attr name="hotelDetailPlaceHolderDrawable" format="reference" />
     <attr name="loginWithExpediaContentDescription" format="reference|string" />
+    <attr name="loginButtonColor" format="reference" />
+    <attr name="hotelBookButtonColor" format="reference" />
 
     <!-- Hotel Confirmation, Customer support option drawable -->
     <attr name="hotelConfirmationCallActionDrawable" format="reference" />
