--- a/project/res/layout/fragment_log_in.xml
+++ b/project/res/layout/fragment_log_in.xml
@@ -130,7 +130,7 @@
                     android:contentDescription="?attr/loginWithExpediaContentDescription"
                     android:gravity="center"
                     android:text="?attr/loginWithExpediaButtonText"
-                    android:textColor="@android:color/black" />
+                    android:textColor="?attr/loginButtonColor" />
 
                 <TextView
                     android:id="@+id/forgot_your_password_link"
