--- a/project/res/layout/hotel_details_main.xml
+++ b/project/res/layout/hotel_details_main.xml
@@ -57,7 +57,8 @@
                 android:background="?attr/loginBookNowButtonDrawable"
                 android:contentDescription="@string/cd_hotel_info_press_book_now"
                 android:text="?attr/hotelBookButtonString"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="?attr/hotelBookButtonColor" />
 
             <Button
                 android:id="@+id/book_by_phone_button"
