220: Change CVV actionbar and book button colors
Summary: https://expedia.mingle.thoughtworks.com/projects/travelocity_eb_apps/cards/220

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D104

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -242,6 +242,7 @@
 
     <!-- HotelCheckout CVV, Book button -->
     <attr name="cvvBookButtonKeypadDrawable" format="reference" />
+    <attr name="cvvBookButtonTextColor" format="reference"/>
 
     <!-- HotelCheckout Traveler Info screen after logged in, Logo to the left of the primary traveler -->
     <attr name="hotelPrimaryTravelerInfoLogoDrawable" format="reference" />
