--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -219,6 +219,7 @@
         <item name="aboutAppNameString">@string/app_name</item>
         <item name="aboutAppLogoDrawable">@drawable/mobiata</item>
         <item name="logoutConfirmationString">@string/logout_confirmation</item>
+        <item name="cvvBookButtonTextColor">@android:color/black</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
@@ -319,6 +320,7 @@
         <item name="actionBarWidgetTheme">@style/FlightActionBarWidgetTheme</item>
         <item name="flightCalendarDatePickerCellDrawable">@drawable/calendar_date_picker_cell</item>
         <item name="flightCalendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup</item>
+
     </style>
 
     <style name="FlightTheme.DropDownSearch">
