--- a/project/res/layout/section_hotel_tablet_edit_traveler.xml
+++ b/project/res/layout/section_hotel_tablet_edit_traveler.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.section.SectionTravelerInfoTablet xmlns:android="http://schemas.android.com/apk/res/android"
-                                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                        xmlns:tools="http://schemas.android.com/tools"
-                                                        android:layout_width="match_parent"
-                                                        android:layout_height="wrap_content"
-                                                        android:orientation="horizontal">
+<com.expedia.bookings.section.SectionTravelerInfoTablet
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <ImageView
         android:layout_width="48dp"
@@ -50,7 +50,7 @@
                     android:hint="@string/phone_number_hint"
                     android:inputType="phone"
                     android:singleLine="true"
-                    tools:ignore="RequiredSize"/>
+                    />
             </LinearLayout>
 
             <EditText
@@ -74,6 +74,7 @@
             android:gravity="right"
             android:textColor="@color/data_review_grey"
             android:textSize="12sp"/>
+
     </LinearLayout>
 
 </com.expedia.bookings.section.SectionTravelerInfoTablet>
