--- a/project/res/layout/include_tablet_legal_blurb_tv.xml
+++ b/project/res/layout/include_tablet_legal_blurb_tv.xml
@@ -4,4 +4,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
+          android:linksClickable="false"
+          android:autoLink="web"
+          android:textColorLink="@color/holo_blue_light"
           android:textColor="@android:color/white"/>
