174: Rebrand flights loading plane window
Summary: Remove Expedia flight loading screen and added Travelocity
static image.

Reviewers: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D105

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -276,4 +276,7 @@
     <!-- for logout confirmation -->
     <attr name="logoutConfirmationString" format="reference|string" />
 
+    <!-- Flight loading screen message position -->
+    <attr name="flightLoadingMessagePosition" format="reference" />
+
 </resources>
