--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -21,4 +21,7 @@
     <item name="preference_spoof_booking_checkbox" type="id"/>
     <item name="preference_suppress_flight_booking_checkbox" type="id"/>
 
+    <item name="search_progress_flight_tvly" type="id"/>
+    <item name="plane_window_view" type="id"/>
+
 </resources>
