--- a/project/res/layout/fragment_status.xml
+++ b/project/res/layout/fragment_status.xml
@@ -8,17 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <com.expedia.bookings.widget.PlaneWindowView
-            android:id="@+id/plane_window_view"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/plane_window_height"
-            android:layout_centerInParent="true" />
+        <include
+            layout="@layout/flight_loading_status" />
 
         <TextView
             android:id="@+id/message_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/plane_window_view"
+            android:layout_above="?attr/flightLoadingMessagePosition"
             android:layout_marginBottom="@dimen/plane_window_text_offset"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -32,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/plane_window_background" />
+
     </RelativeLayout>
 
 </FrameLayout>
