--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -220,6 +220,7 @@
         <item name="aboutAppLogoDrawable">@drawable/mobiata</item>
         <item name="logoutConfirmationString">@string/logout_confirmation</item>
         <item name="cvvBookButtonTextColor">@android:color/black</item>
+        <item name="flightLoadingMessagePosition">@id/plane_window_view</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
