Add the loading fragment to the results activity

--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -28,4 +28,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <!-- LOADING -->
+
+    <com.expedia.bookings.widget.FrameLayoutTouchController
+        android:id="@+id/loading_frag_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
