--- a/project/res/layout/fragment_tvly_launch.xml
+++ b/project/res/layout/fragment_tvly_launch.xml
@@ -44,7 +44,7 @@
         android:splitMotionEvents="false" >
 
         <ImageView
-            android:id="@+id/background_view"
+            android:id="@+id/tvly_home_bg_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
