233 Fixing bug : Flight book exception error message
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D109

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -279,4 +279,6 @@
     <!-- Flight loading screen message position -->
     <attr name="flightLoadingMessagePosition" format="reference" />
 
+    <attr name="flightUnhandledErrorMessage" format="reference|string" />
+
 </resources>
