Changing messages for server error, save payment and save traveler
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D110

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -280,5 +280,8 @@
     <attr name="flightLoadingMessagePosition" format="reference" />
 
     <attr name="flightUnhandledErrorMessage" format="reference|string" />
+    <attr name="serverErrorMessageString" format="reference|string" />
+    <attr name="savePaymentToAccountString" format="reference|string" />
+    <attr name="saveTravelerToAccountString" format="reference|string" />
 
 </resources>
