--- a/project/res/layout/fragment_results_loading.xml
+++ b/project/res/layout/fragment_results_loading.xml
@@ -1,14 +1,35 @@
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="#FFFFFF">
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <com.expedia.bookings.widget.FrameLayoutTouchController
+            android:id="@+id/bg_left"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"/>
+
+        <com.expedia.bookings.widget.FrameLayoutTouchController
+            android:id="@+id/bg_right"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/loading_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/loading"/>
 
-</RelativeLayout>
+</FrameLayout>
