--- a/project/res/layout/fragment_results_loading.xml
+++ b/project/res/layout/fragment_results_loading.xml
@@ -26,49 +26,112 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/loading_text_container"
-        android:layout_width="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:animateLayoutChanges="true"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/loading_tv"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/loading_left_container"
+                android:layout_width="48dp"
+                android:layout_height="96dp"
+                android:layout_marginRight="2dp"
+                android:orientation="vertical">
+
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="4dp"/>
+
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="4dp"/>
+
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/loading_right_container"
+                android:layout_width="48dp"
+                android:layout_height="96dp"
+                android:layout_marginLeft="2dp"
+                android:orientation="vertical">
+
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="4dp"/>
+
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="4dp"/>
+
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/loading_text_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/loading"/>
+            android:layout_gravity="center_horizontal"
+            android:animateLayoutChanges="true"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/hotels_tv"
-            android:paddingLeft="2dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nav_hotels"/>
+            <TextView
+                android:id="@+id/loading_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/loading"/>
 
-        <TextView
-            android:id="@+id/and_tv"
-            android:paddingLeft="2dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/and"/>
+            <TextView
+                android:id="@+id/hotels_tv"
+                android:paddingLeft="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nav_hotels"/>
 
-        <TextView
-            android:id="@+id/flights_tv"
-            android:paddingLeft="2dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nav_flights"/>
+            <TextView
+                android:id="@+id/and_tv"
+                android:paddingLeft="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/and"/>
 
-        <TextView
-            android:id="@+id/ellipsis_tv"
-            android:paddingLeft="2dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="&#8230;"/>
+            <TextView
+                android:id="@+id/flights_tv"
+                android:paddingLeft="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nav_flights"/>
 
+            <TextView
+                android:id="@+id/ellipsis_tv"
+                android:paddingLeft="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="&#8230;"/>
+
+        </LinearLayout>
     </LinearLayout>
-
-
 
 </FrameLayout>
