--- a/project/res/layout/activity_search.xml
+++ b/project/res/layout/activity_search.xml
@@ -22,11 +22,9 @@
         android:layout_height="fill_parent"
         android:visibility="gone" >
 
-        <com.expedia.bookings.widget.gl.GLTagProgressBar
-            android:id="@+id/search_progress_bar"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:visibility="gone" />
+        <include
+            android:id="@+id/dynamic_search_progress_view"
+            layout="@layout/include_hotel_search_progress_bar" />
 
         <View
             android:id="@+id/search_progress_hider"
@@ -49,6 +47,7 @@
             android:padding="16dp"
             android:textColor="#555555"
             android:textStyle="bold" />
+
     </RelativeLayout>
 
     <View
