234: Correcting account label and logo
Summary: When a traveller logs in with Expedia/Tvly account then
corresponding company logo is seen in Traveller info screen in both
Hotel & Flight journey. Also, account_label in Flight journey is
determined based on Expedia/Tvly account.

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D112

--- a/project/res/layout/fragment_flight_checkout.xml
+++ b/project/res/layout/fragment_flight_checkout.xml
@@ -8,12 +8,12 @@
     android:paddingRight="16dp" >
 
     <TextView
-        android:id="@+id/expedia_account_label"
+        android:id="@+id/flight_checkout_account_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-10dp"
         android:layout_marginLeft="8dp"
-        android:text="@string/expedia_account"
+        android:text="?attr/flightCheckoutAccountLabel"
         android:textColor="#BBFFFFFF"
         android:textSize="@dimen/data_form_section_header_text"
         android:visibility="gone" />
