--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -260,6 +260,9 @@
     <!-- for hotels and flights travel type -->
     <attr name="travelerLabelOnCheckout" format="reference|string" />
 
+    <!-- for flight showing Expedia/ Tvly Account label-->
+    <attr name="flightCheckoutAccountLabel" format="reference|string"/>
+
     <!-- for hotels best price guarantee type -->
     <attr name="bestPriceGuaranteeString" format="reference|string" />
     <!-- for hotels details book button -->
@@ -283,5 +286,9 @@
     <attr name="serverErrorMessageString" format="reference|string" />
     <attr name="savePaymentToAccountString" format="reference|string" />
     <attr name="saveTravelerToAccountString" format="reference|string" />
+
+    <!-- for traveller_info_page logo-->
+    <attr name="travellerInfoPageLogo" format="reference"/>
+    <attr name="travellerInfoPageLogoDisabled" format="reference"/>
 
 </resources>
