--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -28,4 +28,7 @@
     <item name="search_progress_flight_tvly" type="id"/>
     <item name="plane_window_view" type="id"/>
 
+    <item name="calendar_flight_desc_support_TEMPLATE_tvly" type="string"/>
+    <item name="calendar_flight_desc_itinerary_TEMPLATE_tvly" type="string"/>
+
 </resources>
