127 Change action bar logo for trip login. Fix trip logout issue
Summary:
Changing action bar logo. Logout from trip was failing as the attribute used for
dialog message was not available in LaunchTheme.

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D115

--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -275,6 +275,7 @@
         <!-- PopupMenu -->
         <item name="dropDownListViewStyle">@style/Widget.Sherlock.Light.ListView.DropDown</item>
         <item name="android:dropDownListViewStyle">@style/Widget.Sherlock.Light.ListView.DropDown</item>
+        <item name="logoutConfirmationString">@string/logout_confirmation</item>
     </style>
 
     <style name="ItineraryTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar">
