--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -60,12 +60,30 @@
         <item name="cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book</item>
         <item name="hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_expedia_white_logo_small</item>
         <item name="hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale</item>
+        <item name="hotelListMapMarkerDrawable">@drawable/map_pin_normal</item>
         <item name="ccCheckoutHologramDrawable">@drawable/ic_credit_card_hologram</item>
         <item name="hotelImagePlaceHolderDrawable">@drawable/placeholder_lg</item>
         <item name="hotelwebViewActionBarLogo">@drawable/ic_logo_hotels</item>
         <item name="travelerLabelOnCheckout">@string/guest_details</item>
         <item name="hotelDetailsUserRatingStyle">@style/RatingBar.UserReview.HotelDetails</item>
         <item name="hotelDetailsStarRatingStyle">@style/RatingBar.Star.HotelDetails</item>
+        <item name="bestPriceGuaranteeString">@string/best_price_guarantee</item>
+        <item name="hotelBookButtonString">@string/book_now</item>
+        <item name="aboutContactUsString">@string/contact_expedia</item>
+        <item name="aboutWebsiteString">@string/expedia_website</item>
+        <item name="aboutAppSupportString">@string/app_support</item>
+        <item name="aboutCopyrightString">@string/copyright</item>
+        <item name="aboutInfoUrlString">@string/app_mobiata_info_url</item>
+        <item name="aboutAppNameString">@string/app_name</item>
+        <item name="aboutAppLogoDrawable">@drawable/mobiata</item>
+        <item name="logoutConfirmationString">@string/logout_confirmation</item>
+        <item name="cvvBookButtonTextColor">@android:color/black</item>
+        <item name="flightLoadingMessagePosition">@id/plane_window_view</item>
+        <item name="flightUnhandledErrorMessage">@string/error_flight_unhandled_TEMPLATE</item>
+        <item name="serverErrorMessageString">@string/error_server</item>
+        <item name="savePaymentToAccountString">@string/save_billing_info_message</item>
+        <item name="saveTravelerToAccountString">@string/save_traveler_message_TEMPLATE</item>
+        <item name="loginWithExpediaContentDescription">@string/cd_checkout_log_in_with_expedia</item>
     </style>
 
     <style name="V2.Theme.Activity.TabletLaunch" tools:targetApi="11">
